Created header with title and navbar
unstyled

--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -4,6 +4,30 @@
 <head>
     <title>United Flag Fliers</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <meta charset="utf-8">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
+<body data-bs-spy="scroll" data-bs-target=".navbar" data-bs-offset="50">
+<header class="container" fixed-top>
+    <div class ="row">
+        <h1 class="col-sm-12">United Flag Fliers</h1>
+    </div>
+    <div class ="row">
+        <nav class="navbar navbar-expand-sm bg-dark">
+            <div class="container-fluid">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#aboutus">About Us</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+</header>
+<div id="aboutus" class="container">
+    <div class ="row">
+        <h2 class="col-sm-12">About Us</h2>
+    </div>
+</div>
+</body>
 </html>
