--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -27,6 +27,12 @@
     </nav>
 </header>
 
+<div id="video" class = "container-fluid">
+    <video width="100%" height="auto" autoplay>
+        <source src="AmericanFlagVideo.mp4" type ="video/mp4">
+    </video>
+</div>
+
 <div id="flags" class="container">
     <div class ="row">
         <h2 class="col-sm-12">Flags</h2>
