--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -35,17 +35,58 @@
 
 <div id="flags" class="container">
     <div class ="row">
-        <h2 class="col-sm-12">Flags</h2>
+        <h1 class="col-sm-12">Flags</h1>
+    </div>
+    <div class ="row">
+        <p class="col-sm-12">A showcase of some of our favorite flags from around the world</p>
+    </div>
+    <div id="slideshowrow" class="row">
+    <div id="countrySlideshow" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#countrySlideshow" data-bs-slide-to="0" class="active"></button>
+        <button type="button" data-bs-target="#countrySlideshow" data-bs-slide-to="1"></button>
+        <button type="button" data-bs-target="#countrySlideshow" data-bs-slide-to="2"></button>
+        <button type="button" data-bs-target="#countrySlideshow" data-bs-slide-to="3"></button>
+        <button type="button" data-bs-target="#countrySlideshow" data-bs-slide-to="4"></button>
+        <button type="button" data-bs-target="#countrySlideshow" data-bs-slide-to="5"></button>
+        <button type="button" data-bs-target="#countrySlideshow" data-bs-slide-to="6"></button>
+      </div>
+    <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="Wales.svg" alt="Wales" class="d-block"width=80%>
+    </div>
+    <div class="carousel-item">
+        <img src="SouthAfrica.svg" alt="South Africa" class="d-block"width=80%>
+    </div>
+    <div class="carousel-item">
+        <img src="Sicily.svg" alt="Sicily" class="d-block"width=100%>
+    </div>
+    <div class="carousel-item">
+        <img src="SaintLucia.svg" alt="South Lucia" class="d-block"width=80%>
+    </div>
+    <div class="carousel-item">
+        <img src="Mexico.svg" alt="Mexico" class="d-block"width=80%>
+    </div>
+    <div class="carousel-item">
+        <img src="Gibraltar.svg" alt="Gibraltar" class="d-block"width=80%>
+    </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#countrySlideshow" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon"></span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#countrySlideshow" data-bs-slide="next">
+        <span class="carousel-control-next-icon"></span>
+      </button>
     </div>
 </div>
 <div id="winds" class="container">
     <div class ="row">
-        <h2 class="col-sm-12">Winds</h2>
+        <h1 class="col-sm-12">Winds</h1>
     </div>
 </div>
 <div id="hobbyists" class="container">
     <div class ="row">
-        <h2 class="col-sm-12">Hobbyists</h2>
+        <h1 class="col-sm-12">Hobbyists</h1>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
