Created Winds section
Used ChatGPT

--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="topbar" data-bs-offset="0" tabindex="0">
+<body data-bs-spy="scroll" data-bs-target="topbar" data-bs-offset="50" tabindex="0">
 <header> 
     <nav id="topbar" class="navbar navbar-expand-sm bg-dark">
         <a class = "navbar-brand" href="#">United Flag Fliers</a>
@@ -38,7 +38,7 @@
         <h1 class="col-sm-12">Flags</h1>
     </div>
     <div class ="row">
-        <p class="col-sm-12">A showcase of some of our favorite flags from around the world</p>
+        <h6 class="col-sm-12">A showcase of some of our favorite flags from around the world</h6>
     </div>
     <div id="slideshowrow" class="row">
     <div id="countrySlideshow" class="carousel slide" data-bs-ride="carousel">
@@ -82,6 +82,16 @@
 <div id="winds" class="container">
     <div class ="row">
         <h1 class="col-sm-12">Winds</h1>
+    </div>
+    <div class ="row">
+        <h6 class="col-sm-12">A statment against the hanging of flags in spaces with no wind</h6>
+    </div>
+    <div class="row">
+        <p>The United Flag Fliers holds the belief that flags hold profound symbolism as representations of unity, heritage, and shared values. While we recognize the importance of displaying flags, we wish to express our reservations about hanging flags indoors in areas where they are inaccessible to natural wind or airflow.<br><br>
+        Flags unfurled outdoors have the ability to ripple and flutter gracefully in the wind, embodying the dynamic spirit and ideals they stand for. This motion captures the attention of onlookers, evoking a sense of national pride and fostering a connection with the principles they symbolize. The gentle rustling of a flag in the breeze is a visual and symbolic representation of freedom and solidarity.<br><br>
+        Indoor spaces typically lack the wind required for flags to move organically. When flags are hung in such areas, their symbolic power can be diminished, and they may appear static and devoid of life. This unintended consequence can dilute the impact of the flag and undermine its intended message.<br><br>
+        In light of these considerations, the United Flag Fliers encourages the thoughtful placement of flags. When displayed indoors, flags should ideally be situated in areas where they can still be seen and appreciated by individuals. If access to natural wind is unfeasible, alternative approaches such as carefully positioned fans or creative installations can be employed to impart a sense of movement and vibrancy.<br><br>
+        Our objective is to ensure that the display of flags, both indoors and outdoors, preserves their significance as potent symbols of unity and shared identity. By endorsing responsible flag display practices, we aim to maintain the capacity of flags to inspire, uplift, and resonate with all who encounter them, regardless of their location.</p>
     </div>
 </div>
 <div id="hobbyists" class="container">
