--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
-<body data-bs-spy="scroll" data-bs-target="topbar" data-bs-offset="50" tabindex="0">
+<body data-bs-spy="scroll" data-bs-target="topbar" data-bs-offset="0" tabindex="0">
 <header> 
     <nav id="topbar" class="navbar navbar-expand-sm bg-dark">
         <a class = "navbar-brand" href="#">United Flag Fliers</a>
@@ -53,22 +53,22 @@
       </div>
     <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="Wales.svg" alt="Wales" class="d-block"width=80%>
+        <img src="Wales.svg" alt="Wales" class="d-block"width=100%>
     </div>
     <div class="carousel-item">
-        <img src="SouthAfrica.svg" alt="South Africa" class="d-block"width=80%>
+        <img src="SouthAfrica.svg" alt="South Africa" class="d-block"width=100%>
     </div>
     <div class="carousel-item">
         <img src="Sicily.svg" alt="Sicily" class="d-block"width=100%>
     </div>
     <div class="carousel-item">
-        <img src="SaintLucia.svg" alt="South Lucia" class="d-block"width=80%>
+        <img src="SaintLucia.svg" alt="South Lucia" class="d-block"width=100%>
     </div>
     <div class="carousel-item">
-        <img src="Mexico.svg" alt="Mexico" class="d-block"width=80%>
+        <img src="Mexico.svg" alt="Mexico" class="d-block"width=100%>
     </div>
     <div class="carousel-item">
-        <img src="Gibraltar.svg" alt="Gibraltar" class="d-block"width=80%>
+        <img src="Gibraltar.svg" alt="Gibraltar" class="d-block"width=100%>
     </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#countrySlideshow" data-bs-slide="prev">
@@ -97,6 +97,25 @@
 <div id="hobbyists" class="container">
     <div class ="row">
         <h1 class="col-sm-12">Hobbyists</h1>
+    </div>
+    <div class="row">
+        <h6 class="col-sm-12">Meet our team</h6>
+    </div>
+    <div class="row">
+        <h4 class ="col-sm-6">Neil</h4>
+        <h4 class ="col-sm-6">Janice</h4>
+    </div>
+    <div class="row">
+        <div class = "col-sm-6">
+            <picture>
+                <img src="Neil.jpg" alt="Neil" class="d-block"width=100%>
+            </picture>
+        </div>
+        <div class = "col-sm-6">
+            <picture>
+                <img src="Janice.jpg" alt="Janice" class="d-block"width=100%>
+            </picture>
+        </div>
     </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm" crossorigin="anonymous"></script>
