--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -103,7 +103,7 @@
     </div>
     <div class="row">
         <h4 class ="col-sm-6">Neil</h4>
-        <h4 class ="col-sm-6">Janice</h4>
+        <h4 class ="col-sm-6">Carl</h4>
     </div>
     <div class="row">
         <div class = "col-sm-6">
@@ -113,7 +113,7 @@
         </div>
         <div class = "col-sm-6">
             <picture>
-                <img src="Janice.jpg" alt="Janice" class="d-block"width=100%>
+                <img src="Carl.jpg" alt="Carl" class="d-block"width=100%>
             </picture>
         </div>
     </div>
