--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -5,6 +5,7 @@
     <title>United Flag Fliers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="utf-8">
+    <meta lang ="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -56,22 +57,22 @@
       </div>
     <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="Wales.svg" alt="Wales" class="d-block"width=100%>
+        <img src="Wales.svg" alt="Wales" class="d-block" width=100%>
     </div>
     <div class="carousel-item">
-        <img src="SouthAfrica.svg" alt="South Africa" class="d-block"width=100%>
+        <img src="SouthAfrica.svg" alt="South Africa" class="d-block" width=100%>
     </div>
     <div class="carousel-item">
-        <img src="Sicily.svg" alt="Sicily" class="d-block"width=100%>
+        <img src="Sicily.svg" alt="Sicily" class="d-block" width=100%>
     </div>
     <div class="carousel-item">
-        <img src="SaintLucia.svg" alt="South Lucia" class="d-block"width=100%>
+        <img src="SaintLucia.svg" alt="South Lucia" class="d-block" width=100%>
     </div>
     <div class="carousel-item">
-        <img src="Mexico.svg" alt="Mexico" class="d-block"width=100%>
+        <img src="Mexico.svg" alt="Mexico" class="d-block" width=100%>
     </div>
     <div class="carousel-item">
-        <img src="Gibraltar.svg" alt="Gibraltar" class="d-block"width=100%>
+        <img src="Gibraltar.svg" alt="Gibraltar" class="d-block" width=100%>
     </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#countrySlideshow" data-bs-slide="prev">
@@ -81,6 +82,7 @@
         <span class="carousel-control-next-icon"></span>
       </button>
     </div>
+</div>
 </div>
 <div id="winds" class="container">
     <div class ="row">
@@ -111,12 +113,12 @@
     <div class="row">
         <div class = "col-sm-6">
             <picture>
-                <img src="Neil.jpg" alt="Neil" class="d-block"width=100%>
+                <img src="Neil.jpg" alt="Neil" class="d-block" width=100%>
             </picture>
         </div>
         <div class = "col-sm-6">
             <picture>
-                <img src="Carl.jpg" alt="Carl" class="d-block"width=100%>
+                <img src="Carl.jpg" alt="Carl" class="d-block" width=100%>
             </picture>
         </div>
     </div>
