--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -32,7 +32,7 @@
 </header>
 
 <div id="video" class = "container-fluid">
-    <video width="100%" height="auto" autoplay>
+    <video width="100%" height="auto" autoplay muted>
         <source src="AmericanFlagVideo.mp4" type ="video/mp4">
     </video>
 </div>
