--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -1,11 +1,10 @@
 <!-- wind, flag, hobbies-->
 <!DOCTYPE html>
-<html>
+<html lang = "en">
 <head>
     <title>United Flag Fliers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="utf-8">
-    <meta lang ="en">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
