--- a/csci340lab1/index.html
+++ b/csci340lab1/index.html
@@ -31,7 +31,7 @@
 </header>
 
 <div id="video" class = "container-fluid">
-    <video width="100%" height="auto" autoplay muted>
+    <video width="100%" autoplay muted>
         <source src="AmericanFlagVideo.mp4" type ="video/mp4">
     </video>
 </div>
@@ -55,22 +55,22 @@
       </div>
     <div class="carousel-inner">
     <div class="carousel-item active">
-        <img src="Wales.svg" alt="Wales" class="d-block" width=100%>
+        <img src="Wales.svg" alt="Wales" class="d-block" width="100%">
     </div>
     <div class="carousel-item">
-        <img src="SouthAfrica.svg" alt="South Africa" class="d-block" width=100%>
+        <img src="SouthAfrica.svg" alt="South Africa" class="d-block" width="100%">
     </div>
     <div class="carousel-item">
-        <img src="Sicily.svg" alt="Sicily" class="d-block" width=100%>
+        <img src="Sicily.svg" alt="Sicily" class="d-block" width="100%">
     </div>
     <div class="carousel-item">
-        <img src="SaintLucia.svg" alt="South Lucia" class="d-block" width=100%>
+        <img src="SaintLucia.svg" alt="South Lucia" class="d-block" width="100%">
     </div>
     <div class="carousel-item">
-        <img src="Mexico.svg" alt="Mexico" class="d-block" width=100%>
+        <img src="Mexico.svg" alt="Mexico" class="d-block" width="100%">
     </div>
     <div class="carousel-item">
-        <img src="Gibraltar.svg" alt="Gibraltar" class="d-block" width=100%>
+        <img src="Gibraltar.svg" alt="Gibraltar" class="d-block" width="100%">
     </div>
     </div>
     <button class="carousel-control-prev" type="button" data-bs-target="#countrySlideshow" data-bs-slide="prev">
