--- a/csci340lab4/index.html
+++ b/csci340lab4/index.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-    <title>Good Morning</title>
+    <title>Daily Update</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
 </head>
-<body data-bs-spy="scroll" data-bs-target="topbar" data-bs-offset="0" tabindex="0">
-    <input id="clicker" type="button" value="Input"></input>
-    <p id="para">test</p>
+<body>
+    <div class = "container-fluid" id = "weatherbox">
+        <div class="row">
+            <div class="col-sm-8">
+                <h1 id="date">Date</h1> 
+                <h5 id = "report">Weather Report</h5> 
+            </div>
+            <div class="col-sm-4">
+                <img id = "weatherImage" src="" alt="Weather Photo">
+            </div>
+        </div>
+      </div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="script.js"></script>
