--- a/csci340lab4/index.html
+++ b/csci340lab4/index.html
@@ -33,7 +33,7 @@
         <div class="row">
             <div class = col-sm-12 id="contentBox">
                 <h2 id="sectionHeader">Header</h2>
-                <h5 id="sectionContent">text</h5>
+                <h6 id="sectionContent">text</h6>
             </div>
         </div>
         <div class="row">
@@ -41,6 +41,13 @@
                 <h2>Dog of the Day!</h2>
                 <img id = "dogImage" src="" alt="Dog Photo">
             </div>
+        </div>
+    </div>
+    <div class="row">
+        <div class ="col-sm-12">
+            <div class="text-center">
+                <p>Web page generated using Open-Mateo, icanhazdadjoke, bored, useless facts, Advice Slip, and random.dog APIs</p>
+              </div>
         </div>
     </div>
 
