--- a/csci340lab4/index.html
+++ b/csci340lab4/index.html
@@ -6,13 +6,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Oswald&family=Playfair+Display&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class = "container-fluid" >
         <div class="row" id = "weatherbox">
             <div class="col-sm-8">
                 <h1 id="date">Date</h1> 
-                <h5 id = "report">Weather Report</h5> 
+                <h4 id = "report">Weather Report</h4> 
             </div>
             <div class="col-sm-4">
                 <img id = "weatherImage" src="" alt="Weather Photo">
@@ -33,7 +36,7 @@
         <div class="row">
             <div class = col-sm-12 id="contentBox">
                 <h2 id="sectionHeader">Header</h2>
-                <h6 id="sectionContent">text</h6>
+                <h5 id="sectionContent">text</h5>
             </div>
         </div>
         <div class="row">
