--- a/csci340lab4/index.html
+++ b/csci340lab4/index.html
@@ -18,7 +18,7 @@
                 <h4 id = "report">Weather Report</h4> 
             </div>
             <div class="col-sm-4">
-                <img id = "weatherImage" src="" alt="Weather Photo">
+                <img id = "weatherImage" src="clear.jpg" alt="Weather Photo">
             </div>
         </div>
     </div>
@@ -26,10 +26,10 @@
         <div class="row">
             <div class ="col-sm-12">
                 <div class="text-center">
-                    <input id="button1" type="button" value="Joke"></input>
-                    <input id="button2" type="button" value="Activity"></input>
-                    <input id="button3" type="button" value="Fact"></input>
-                    <input id="button4" type="button" value="Advice"></input>
+                    <input id="button1" type="button" value="Joke">
+                    <input id="button2" type="button" value="Activity">
+                    <input id="button3" type="button" value="Fact">
+                    <input id="button4" type="button" value="Advice">
                   </div>
             </div>
         </div>
@@ -42,7 +42,7 @@
         <div class="row">
             <div class = col-sm-12 id="dogBox">
                 <h2>Dog of the Day!</h2>
-                <img id = "dogImage" src="" alt="Dog Photo">
+                <img id = "dogImage" src="dog.jpg" alt="Dog Photo">
             </div>
         </div>
     </div>
